--- a/src/app/pieces/role/role.component.html
+++ b/src/app/pieces/role/role.component.html
@@ -1,5 +1,5 @@
 <div class="piece" (mouseover)="displayMenu='show'" (mouseleave)="displayMenu='hide'" (click)="onClickPiece()"
-[ngClass]="{'isActive': (pieceDetailsService.piece == role ? true : false)}">
+[class]="pieceDetailsService.piece == role ? 'isActive' : 'border'">
     <div class="piece-attach piece-attach-left-top"></div>
     <div class="piece-attach piece-attach-right"></div>
     <div class="piece-attach piece-attach-left-bottom"></div>
@@ -164,8 +164,7 @@
 
         <div class="piece-form-title">Rôle supplémentaire</div>
         <div class="piece-form-supplementary" [style.background]="'linear-gradient(302deg, '+supplementaryRole.color+' 0%, '+supplementaryRole.color+' 50%, #9ad5ec 50%, #9ad5ec 100%)'"
-        *ngFor="let supplementaryRole of role.supplementaryRoles, let i = index"
-        [ngClass]="{'isActive-supplementaryRole': (pieceDetailsService.piece == role ? true : false)}">
+        *ngFor="let supplementaryRole of role.supplementaryRoles, let i = index">
             <div class="piece-form-supplementary-form">
                 <div>
                     <div class="piece-form-supplementary-form-name">
