--- a/src/styles.scss
+++ b/src/styles.scss
@@ -53,6 +53,12 @@ body {
 }
 
 .isActive::after {
+    content: "";
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    right: 0px;
+    bottom: 0px;
     animation: 1s effect infinite;
     z-index: 2;
     pointer-events: none;
@@ -66,4 +72,14 @@ $highlight-color: #009b00;
     50% {
         box-shadow: inset 0 0 20px $highlight-color;
     }
+}
+
+.border::after {
+    content: "";
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    right: 0px;
+    bottom: 0px;
+    border: 1px solid black;
 }
