warning on identifier duplicate

--- a/src/app/pieces/tasks/optionnal-task/optionnal-task.component.html
+++ b/src/app/pieces/tasks/optionnal-task/optionnal-task.component.html
@@ -143,7 +143,7 @@
 
     <div class="piece-form">
         <div class="piece-form-top">
-            <input class="piece-form-top-identifier" name="identifier" type="text" [(ngModel)]="task.identifier" placeholder="A" min="1" maxlength="5"
+            <input class="piece-form-top-identifier" name="identifier" type="text" [value]="task.identifier" (change)="changeIdentifier($event)" placeholder="A" min="1" maxlength="5"
             matTooltip="Identifiant de la tâche (ex: A, B, C, …)"
             matTooltipPosition="above" [matTooltipDisabled]="!tooltipService.activatedTooltips"/>
             <div class="piece-form-top-title">Tâche<br>optionnelle</div>
