success/fail load save file

--- a/src/app/components/snackbars/identifier-snackbar/identifier-snackbar.component.scss
+++ b/src/app/components/snackbars/identifier-snackbar/identifier-snackbar.component.scss
@@ -1,7 +1,6 @@
 ::ng-deep .mat-snack-bar-container {
-    background-color: #f8aa14;
+    background-color: #fec001;
     color: black;
-    box-shadow: 0px 0px 15px 5px #f8aa14;
-    //font-family: 'Glacial Indifference Bold';
-    justify-content: space-between;
+    box-shadow: 0px 0px 15px 5px #fec001;
+    text-align: center;
 }
