--- a/src/app/pieces/role/role.component.html
+++ b/src/app/pieces/role/role.component.html
@@ -23,26 +23,26 @@
         <img src="../../../assets/background-images/role2_opacity0.png" draggable="false" *ngIf="i == 1"/>
         <div class="piece-form-intitule">
             <label for="intitule">Intitulé</label>
-            <input name="intitule" type="text" [(ngModel)]="role.intitule" placeholder="Développeur/euse web"
+            <input name="intitule" type="text" [(ngModel)]="role.intitule" (change)="editTrace($event,'name')" placeholder="Développeur/euse web"
             matTooltip="Nom de ce rôle."
             matTooltipPosition="above" [matTooltipDisabled]="!tooltipService.activatedTooltips"/>   
         </div>
         <div class="piece-form-name">
             <label for="name">Nom de la quête</label>
-            <input name="name" type="text" [(ngModel)]="role.questName" placeholder="Intégration de site web"
+            <input name="name" type="text" [(ngModel)]="role.questName" (change)="editTrace($event,'quest_name')" placeholder="Intégration de site web"
             matTooltip="En 2-3 mots, l'intitulé de la quête de ce rôle"
             matTooltipPosition="above" [matTooltipDisabled]="!tooltipService.activatedTooltips"/>   
         </div>
         <div class="piece-form-description">
             <label for="description">Description</label>
-            <textarea name="description" [(ngModel)]="role.description"
+            <textarea name="description" [(ngModel)]="role.description" (change)="editTrace($event,'description_r')"
             matTooltip="Élément précis sur ce rôle si nécessaire."
             matTooltipPosition="above" [matTooltipDisabled]="!tooltipService.activatedTooltips"></textarea>
         </div>
         <div class="piece-form-objectives">
             <label for="objective">Objectif(s) pédagoqique(s)</label>
             <div class="piece-form-objectives-objective" *ngFor="let objective of role.educationnalObjectives, let i = index">
-                <input name="objective" type="text" [(ngModel)]="role.educationnalObjectives[i].objective" placeholder="Nom de l'objectif"
+                <input name="objective" type="text" [(ngModel)]="role.educationnalObjectives[i].objective" (change)="editTrace($event, 'Obj_['+(i)+']')" placeholder="Nom de l'objectif"
                 matTooltip="Les objectifs visés pour ce rôle en particulier"
                 matTooltipPosition="above" [matTooltipDisabled]="!tooltipService.activatedTooltips"/>
                 <button mat-button *ngIf="role.educationnalObjectives.length > 1" (click)="removeEducationnalObjective(i)"><mat-icon fontIcon="remove"></mat-icon></button>
@@ -68,8 +68,8 @@
                 </div>
                 <div class="piece-form-rewards-reward-objects" *ngIf="reward.type == 'objects'">
                     <div class="piece-form-rewards-reward-objects-object" *ngFor="let object of getObjectsReward(i).objects, let j = index">
-                        <input type="number" [(ngModel)]="object.number"/>
-                        <input type="text" [(ngModel)]="object.name" placeholder="Nom de l'objet"/>
+                        <input type="number" [(ngModel)]="object.number" (change)="editTrace($event, 'Reward_['+i+']_object_['+j+']_quantity')"/>
+                        <input type="text" [(ngModel)]="object.name" (change)="editTrace($event, 'Reward_['+i+']_object_['+j+']_name')" placeholder="Nom de l'objet"/>
                         <button mat-button (click)="removeObject(i,j)"><mat-icon fontIcon="remove"></mat-icon></button>
                     </div>
                     <button mat-button class="piece-form-rewards-reward-objects-add" (click)="addObject(i)"><mat-icon fontIcon="add"></mat-icon></button>
@@ -90,8 +90,8 @@
                 </div>
                 -->
                 <div class="piece-form-rewards-reward-skill" *ngIf="reward.type == 'skill'">
-                    <input type="number" [(ngModel)]="getSkillReward(i).quantity"/>
-                    <select [(ngModel)]="getSkillReward(i).skill">
+                    <input type="number" [(ngModel)]="getSkillReward(i).quantity" (change)="editTrace($event, 'Reward_['+i+']_quantity')"/>
+                    <select [(ngModel)]="getSkillReward(i).skill" (change)="editTrace($event, 'Reward_['+i+']_skill')">
                         <ng-container *ngFor="let skill of role.ressources">
                             <option [ngValue]="skill" *ngIf="skill.type == 'attribut'">{{skill.name}}</option>
                         </ng-container>
@@ -112,13 +112,13 @@
                     <button mat-button (click)="removeReward(i)"><mat-icon fontIcon="remove"></mat-icon></button>
                 </div>
                 <div class="piece-form-rewards-reward-objective" *ngIf="reward.type == 'objective'">
-                    <select [(ngModel)]="getObjectiveReward(i).objective">
+                    <select [(ngModel)]="getObjectiveReward(i).objective" (change)="editTrace($event, 'Reward_['+i+']_objective')">
                         <option [ngValue]="objective" *ngFor="let objective of role.educationnalObjectives">{{objective.objective}}</option>
                     </select>
                     <button mat-button (click)="removeReward(i)"><mat-icon fontIcon="remove"></mat-icon></button>
                 </div>
                 <div class="piece-form-rewards-reward-other" *ngIf="reward.type == 'other'">
-                    <textarea [(ngModel)]="getOtherReward(i).text"></textarea>
+                    <textarea [(ngModel)]="getOtherReward(i).text" (change)="editTrace($event, 'Reward_['+i+']_other')"></textarea>
                     <button mat-button (click)="removeReward(i)"><mat-icon fontIcon="remove"></mat-icon></button>
                 </div>
             </div>  
@@ -131,7 +131,7 @@
             <div class="piece-form-title">Personnalisation</div>
             <div class="piece-form-personnalization-appearance">
                 <label>Apparence, équipement</label>
-                <textarea [(ngModel)]="role.stuff"
+                <textarea [(ngModel)]="role.stuff" (change)="editTrace($event, 'equipment')"
                 matTooltip="Si le rôle a une tenue particulière ou des objets spécifiques"
                 matTooltipPosition="above" [matTooltipDisabled]="!tooltipService.activatedTooltips"></textarea>
             </div>
@@ -144,15 +144,15 @@
             <div class="piece-form-ressources-ressource" *ngFor="let ressource of role.ressources, let i = index">
                 <div class="piece-form-ressources-ressource-name">
                     <label for="name">Nom</label>
-                    <input name="name" type="text" [(ngModel)]="ressource.name"/>
+                    <input name="name" type="text" [(ngModel)]="ressource.name" (change)="editTrace($event, 'Skill/Ressource_['+i+']_name')"/>
                 </div>
                 <div class="piece-form-ressources-ressource-quantity">
                     <label for="quantity">Nombre / stats</label>
-                    <input name="quantity" type="text" [(ngModel)]="ressource.number">
+                    <input name="quantity" type="text" [(ngModel)]="ressource.number" (change)="editTrace($event, 'Skill/Ressource_['+i+']_stats')">
                 </div>
                 <div class="piece-form-ressources-ressource-quantity">
                     <label for="type">Type</label>
-                    <select name="type" [(ngModel)]="ressource.type">
+                    <select name="type" [(ngModel)]="ressource.type" (change)="editTrace($event, 'Skill/Ressource_['+i+']_type')">
                         <option value="ressource">Ressource / Objet</option>
                         <option value="attribut">Compétence</option>
                     </select>
@@ -169,29 +169,29 @@
                 <div>
                     <div class="piece-form-supplementary-form-name">
                         <label for="name">Nom</label>
-                        <input name="name" type="text" [(ngModel)]="supplementaryRole.name"
+                        <input name="name" type="text" [(ngModel)]="supplementaryRole.name" (change)="editTrace($event, 'Secondary_role_['+i+']_name')"
                         matTooltip="Intitulé du rôle supplémentaire"
                         matTooltipPosition="above" [matTooltipDisabled]="!tooltipService.activatedTooltips"/>
                     </div>
                     <div class="piece-form-supplementary-form-color">
                         <label for="color">Couleur</label>
-                        <input name="color" type="color" [(ngModel)]="supplementaryRole.color"/>
+                        <input name="color" type="color" [(ngModel)]="supplementaryRole.color" (change)="editTrace($event, 'Secondary_role_['+i+']_color')"/>
                     </div>
                     <div class="piece-form-supplementary-form-textarea">
                         <label for="objectives">Objectifs</label>
-                        <textarea name="objectives" [(ngModel)]="supplementaryRole.objectives"
+                        <textarea name="objectives" [(ngModel)]="supplementaryRole.objectives" (change)="editTrace($event, 'Secondary_role_['+i+']_obj')"
                         matTooltip="Objectifs (pédagogiques) de ce rôle supplémentaire"
                         matTooltipPosition="above" [matTooltipDisabled]="!tooltipService.activatedTooltips"></textarea>
                     </div>
                     <div class="piece-form-supplementary-form-textarea">
                         <label for="skills">Compétences</label>
-                        <textarea name="skills" [(ngModel)]="supplementaryRole.skills"
+                        <textarea name="skills" [(ngModel)]="supplementaryRole.skills" (change)="editTrace($event, 'Secondary_role_['+i+']_skill')"
                         matTooltip="Compétences spécifiques à ce rôle pour effectuer les tâches qui lui seront liées (même couleur)"
                         matTooltipPosition="above" [matTooltipDisabled]="!tooltipService.activatedTooltips"></textarea>
                     </div>
                     <div class="piece-form-supplementary-form-textarea">
                         <label for="rules">Règles</label>
-                        <textarea name="rules" [(ngModel)]="supplementaryRole.rules"
+                        <textarea name="rules" [(ngModel)]="supplementaryRole.rules" (change)="editTrace($event, 'Secondary_role_['+i+']_rule')"
                         matTooltip="Règles spécifiques à ce rôle (a-t-il des contraintes ou des droits, accès supplémentaires ?)"
                         matTooltipPosition="above" [matTooltipDisabled]="!tooltipService.activatedTooltips"></textarea>
                     </div>
