Traces on comments

--- a/src/app/components/comment/comment.component.html
+++ b/src/app/components/comment/comment.component.html
@@ -1,6 +1,6 @@
 <div class="form">
     <div class="form-comment">
-        <textarea [disabled]="!isEditable" [(ngModel)]="comment.content"></textarea>
+        <textarea [disabled]="!isEditable" [(ngModel)]="comment.content" (change)="editTrace($event, 'comment')"></textarea>
         <div class="form-comment-buttons">
             <button mat-button (click)="isEditable = !isEditable">Modifier</button>
             <button mat-button (click)="removeComment(index)">Supprimer</button>
@@ -10,7 +10,7 @@
         <textarea [disabled]="!answerEditables[i]" [(ngModel)]="comment.answers[i]">Une réponse</textarea>
         <div class="form-comment-buttons">
             <button mat-button (click)="this.answerEditables[i] = !this.answerEditables[i]">Modifier</button>
-            <button mat-button (click)="removeAnwer(i)">Supprimer</button>
+            <button mat-button (click)="removeAnswer(i)">Supprimer</button>
         </div>  
     </div>
     <div class="form-newanswer">
